--- a/modules/server/src/main/resources/vm/user/edit.vm
+++ b/modules/server/src/main/resources/vm/user/edit.vm
@@ -66,60 +66,101 @@
                 <div class="layui-collapse">
                     #if($nodeModels && $nodeModels.size()>0)
                         #foreach($item in $nodeModels)
-                            <div class="layui-colla-item">
-                                <div class="layui-colla-title">
-                                    <div title="$item.id">
-                                        $item.name
+                        <div class="layui-colla-item">
+                            <div class="layui-colla-title">
+                                <div title="$item.id">
+                                    $item.name
+                                </div>
+                                <div class="layui-layout-right" onclick="stope()" style="padding-right: 10%;">
+                                    <div class="layui-inline">
+                                        <label class="layui-form-label" style="margin-top: 8px;">节点管理员</label>
+                                        <div class="layui-input-block">
+                                            #set($nowName=$item.id+"_manage")
+                                            <input type="checkbox" value="true" nodeId="$item.id"
+                                                #if($userItem.nodeRole[$item.id].manage)
+                                                   checked
+                                                #end
+                                                   name="$nowName" lay-filter="manage" lay-skin="switch"
+                                                   lay-text="是|否">
+                                        </div>
                                     </div>
-                                    <div class="layui-layout-right" onclick="stope()" style="padding-right: 10%;">
+                                </div>
+                            </div>
+                            <div class="layui-colla-content layui-show">
+                                <div class="layui-form-item" id="projectsDiv">
+                                    <label class="layui-form-label" title="能删除项目，启动停止项目">管理项目</label>
+                                    <div class="layui-inline">
                                         <div class="layui-inline">
-                                            <label class="layui-form-label" style="margin-top: 8px;">节点管理员</label>
+                                            <label class="layui-form-label">上传文件</label>
                                             <div class="layui-input-block">
-                                                #set($nowName=$item.id+"_manage")
-                                                <input type="checkbox" value="true" nodeId="$item.id"
-                                                    #if($userItem.nodeRole[$item.id].manage)
+                                                #set($nowName=$item.id+"_uploadFile")
+                                                <input type="checkbox" value="true"
+                                                    #if($userItem.nodeRole[$item.id].uploadFile)
                                                        checked
                                                     #end
-                                                       name="$nowName" lay-filter="manage" lay-skin="switch"
-                                                       lay-text="是|否">
+                                                       name="$nowName" lay-skin="switch" lay-text="是|否">
                                             </div>
                                         </div>
-                                    </div>
-                                </div>
-                                <div class="layui-colla-content layui-show">
-                                    <div class="layui-form-item" id="projectsDiv">
                                         <div class="layui-inline">
-                                            <label class="layui-form-label" title="能删除项目，启动停止项目">管理项目</label>
-                                            <div class="layui-inline">
-                                                <div class="layui-inline">
-                                                    <label class="layui-form-label">上传文件</label>
-                                                    <div class="layui-input-block">
-                                                        #set($nowName=$item.id+"_uploadFile")
-                                                        <input type="checkbox" value="true"
-                                                            #if($userItem.nodeRole[$item.id].uploadFile)
-                                                               checked
-                                                            #end
-                                                               name="$nowName" lay-skin="switch" lay-text="是|否">
-                                                    </div>
-                                                </div>
-                                                <div class="layui-inline">
-                                                    <label class="layui-form-label">删除文件</label>
-                                                    <div class="layui-input-block">
-                                                        #set($nowName=$item.id+"_deleteFile")
-                                                        <input type="checkbox" value="true"
-                                                            #if($userItem.nodeRole[$item.id].deleteFile)
-                                                               checked
-                                                            #end
-                                                               name="$nowName" lay-skin="switch" lay-text="是|否">
-                                                    </div>
-                                                </div>
-                                                <div>
-                                                    <ul id="tree_$item.id" class="ztree"></ul>
-                                                </div>
+                                            <label class="layui-form-label">删除文件</label>
+                                            <div class="layui-input-block">
+                                                #set($nowName=$item.id+"_deleteFile")
+                                                <input type="checkbox" value="true"
+                                                    #if($userItem.nodeRole[$item.id].deleteFile)
+                                                       checked
+                                                    #end
+                                                       name="$nowName" lay-skin="switch" lay-text="是|否">
                                             </div>
+                                        </div>
+                                        <div>
+                                            <ul id="tree_$item.id" class="ztree"></ul>
                                         </div>
                                     </div>
                                 </div>
+                                #if($nodeTomcat)
+                                    #set($nowTomcat=$nodeTomcat[$item.id])
+                                #end
+                                #if($nowTomcat&&$nowTomcat.size()>0)
+                                    <div class="layui-form-item">
+                                        <label class="layui-form-label">管理Tomcat</label>
+                                        <div class="layui-inline">
+                                            <div class="layui-inline">
+                                                <label class="layui-form-label">上传文件</label>
+                                                <div class="layui-input-block">
+                                                    #set($nowName=$item.id+"_uploadTomcatFile")
+                                                    <input type="checkbox" value="true"
+                                                        #if($userItem.nodeTomcatRole[$item.id].uploadFile)
+                                                           checked
+                                                        #end
+                                                           name="$nowName" lay-skin="switch" lay-text="是|否">
+                                                </div>
+                                            </div>
+                                            <div class="layui-inline">
+                                                <label class="layui-form-label">删除文件</label>
+                                                <div class="layui-input-block">
+                                                    #set($nowName=$item.id+"_deleteTomcatFile")
+                                                    <input type="checkbox" value="true"
+                                                        #if($userItem.nodeTomcatRole[$item.id].deleteFile)
+                                                           checked
+                                                        #end
+                                                           name="$nowName" lay-skin="switch" lay-text="是|否">
+                                                </div>
+                                            </div>
+                                            <div>
+                                                #foreach($pItem in $nowTomcat)
+                                                    #set($nowName="p_"+$item.id+"_"+$pItem.id)
+                                                    <input type="checkbox"
+                                                           p="p_$item.id"
+                                                           name="$nowName"
+                                                           #if($userItem.isTomcat($item.id,$pItem.id))checked#end
+                                                           project="$pItem.id"
+                                                           value="$pItem.id"
+                                                           title="$pItem.name">
+                                                #end
+                                            </div>
+                                        </div>
+                                    </div>
+                                #end
                             </div>
                         #end
                     #else
@@ -131,14 +172,14 @@
                         </div>
                     #end
                 </div>
+                </div>
             </div>
-        </div>
-        #if(!$errorNode)
-            <div class="layui-form-item" style="padding-left: 20%">
-                <button class="layui-btn layui-btn-normal" lay-submit lay-filter="submitUser" id="submitUser">提交
-                </button>
-            </div>
-        #end
+            #if(!$errorNode)
+                <div class="layui-form-item" style="padding-left: 20%;margin-top: 20px;">
+                    <button class="layui-btn layui-btn-normal" lay-submit lay-filter="submitUser" id="submitUser">提交
+                    </button>
+                </div>
+            #end
     </form>
 </div>
 </body>
@@ -284,6 +325,17 @@
                 }
             }
         }
+
+        //
+        form.on('switch(manage)', function (data) {
+            var nodeId = $(data.elem).attr("nodeId");
+            if (data.elem.checked) {
+                $('input[p="p_' + nodeId + '"]').prop('disabled', false).removeClass('layui-disabled');
+            } else {
+                $('input[p="p_' + nodeId + '"]').prop('disabled', true).addClass('layui-disabled');
+            }
+            form.render();
+        });
     }
 </script>
 </html>
