--- a/modules/server/src/main/resources/vm/node/tomcat/list.vm
+++ b/modules/server/src/main/resources/vm/node/tomcat/list.vm
@@ -12,12 +12,12 @@
 </head>
 <body>
 
-    <div class="layui-row">
-        #if($user.isSystemUser())
+<div class="layui-row">
+    #if($user.isSystemUser())
         <button onclick="editTomcat('');" class="layui-btn layui-btn-sm">添加Tomcat</button>
-        #end
-        <button onclick="refreshList();" class="layui-btn layui-btn-sm">刷新列表</button>
-    </div>
+    #end
+    <button onclick="refreshList();" class="layui-btn layui-btn-sm">刷新列表</button>
+</div>
 
     #if($array && $array.size()>0)
     <div class="layui-collapse" style="margin: 10px;">
@@ -26,28 +26,35 @@
                 <div class="layui-colla-title">
                     <div data-title-$item.id>
                         $item.name
-                        <div data-icon="$item.id" style="height: 10px; width: 10px; border-radius: 5px; display: inline-block;"></div>
+                        <div data-icon="$item.id"
+                             style="height: 10px; width: 10px; border-radius: 5px; display: inline-block;"></div>
                     </div>
                     <div class="layui-layout-right" style="padding-right: 15px;">
                         #if($user.isSystemUser())
-##                            <button op="addProject" data-id="$item.id" data-name="$item.name" class="layui-btn layui-btn-sm ">
-##                                新增项目
-##                            </button>
-                            <button id="uploadFile_$item.id" style="margin-right: 10px;" class="layui-btn layui-btn-sm"><i class="layui-icon">&#xe67c;</i>上传WAR</button>
+                        ##                            <button op="addProject" data-id="$item.id" data-name="$item.name" class="layui-btn layui-btn-sm ">
+                        ##                                新增项目
+                        ##                            </button>
+
                             <button op="edit" data-id="$item.id" data-name="$item.name" class="layui-btn layui-btn-sm ">
                                 编辑
                             </button>
-                            <button op="delete" data-id="$item.id" data-name="$item.name" class="layui-btn layui-btn-sm layui-btn-danger">
-                                移除
+                        #end
+                        #if($user.isUploadTomcatFile($node.id))
+                            <button id="uploadFile_$item.id" style="margin-right: 10px;" class="layui-btn layui-btn-sm">
+                                <i class="layui-icon">&#xe67c;</i>上传WAR
                             </button>
-
-                            <button op="start" data-op="$item.id" data-id="$item.id" data-name="$item.name" class="layui-btn layui-btn-sm">
+                        #end
+                        #if($user.isTomcat($node.id,$item.id))
+                            <button op="start" data-op="$item.id" data-id="$item.id" data-name="$item.name"
+                                    class="layui-btn layui-btn-sm">
                                 启动
                             </button>
-                            <button op="stop" data-op="$item.id" data-id="$item.id" data-name="$item.name" class="layui-btn layui-btn-sm layui-btn-danger">
+                            <button op="stop" data-op="$item.id" data-id="$item.id" data-name="$item.name"
+                                    class="layui-btn layui-btn-sm layui-btn-danger">
                                 停止
                             </button>
-                            <button op="restart" data-op="$item.id" data-id="$item.id" data-name="$item.name" class="layui-btn layui-btn-sm  layui-btn-danger">
+                            <button op="restart" data-op="$item.id" data-id="$item.id" data-name="$item.name"
+                                    class="layui-btn layui-btn-sm  layui-btn-danger">
                                 重启
                             </button>
                         #end
@@ -64,20 +71,28 @@
     #end
 <script type="text/html" id="toolbar_op">
     <a href="javascript:;" class="layui-btn  layui-btn-sm" lay-event="manage">管理</a>
-    {{# if (d.status == "stopped") { }}
-    <a href="javascript:;" class="layui-btn  layui-btn-sm" lay-event="start">启动</a>
-    {{# } else if (d.status == "running") { }}
-    <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-warm" lay-event="stop">停止</a>
-    <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-warm" lay-event="reload">重启</a>
-    {{# } }}
-    <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-danger" lay-event="delete">删除</a>
+        #if($user.isTomcat($node.id,$id))
+        {{# if (d.status == "stopped") { }}
+        <a href="javascript:;" class="layui-btn  layui-btn-sm" lay-event="start">启动</a>
+        {{# } else if (d.status == "running") { }}
+        <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-warm" lay-event="stop">停止</a>
+        <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-warm" lay-event="reload">重启</a>
+        {{# } }}
+        #end
+        #if($user.isSystemUser())
+        <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-danger" lay-event="delete">删除</a>
+        #end
 </script>
 </body>
 <script type="text/javascript">
     var config = {
         cols: [[
             {field: 'path', title: '项目路径', width: "25%"},
-            {field: 'status', title: '运行状态', width: "25%", templet: function (d) { return d.status == 'running' ? '已运行' : '已停止'; }},
+            {
+                field: 'status', title: '运行状态', width: "25%", templet: function (d) {
+                    return d.status == 'running' ? '已运行' : '已停止';
+                }
+            },
             {field: 'session', title: 'Session个数', width: "20%"},
             {field: 'opreation', title: '操作', width: "250", hide: false, toolbar: '#toolbar_op'}
         ]],
@@ -100,7 +115,7 @@
             data: {
                 id: id
             },
-            success: function(data) {
+            success: function (data) {
                 layer.msg(data.msg);
                 getTomcatStatus(id);
             }
@@ -137,7 +152,7 @@
                 // 停止tomat
                 layer.confirm('确定停止Tomcat - ' + name + '?', {
                     btn: ['确定', '取消']
-                }, function(index) {
+                }, function (index) {
                     layer.close(index);
                     execTomcatOp(id, op);
                 });
@@ -146,7 +161,7 @@
                 // 启动tomatre
                 layer.confirm('确定重启Tomcat - ' + name + '?', {
                     btn: ['确定', '取消']
-                }, function(index) {
+                }, function (index) {
                     layer.close(index);
                     execTomcatOp(id, op);
                 });
@@ -161,26 +176,6 @@
                     area: ['80%', '60%'],
                     content: 'addProject.html?id=' + id
                 });
-            }
-
-            if ("delete" == op) {
-                layer.confirm('确定移除Tomcat - ' + name + '?', {
-                    btn: ['确定', '取消']
-                }, function (index) {
-                    loadingAjax({
-                        url: './delete',
-                        data: {
-                            id: id
-                        },
-                        success: function (data) {
-                            layer.msg(data.msg);
-                            setTimeout(function() {
-                                window.location.reload();
-                            }, 2000);
-                        }
-                    });
-                });
-                return false;
             }
 
             return false;
@@ -260,7 +255,7 @@
             layer.confirm(tip[op], {
                 icon: 8,
                 btn: ['确定', '取消']
-            }, function(index) {
+            }, function (index) {
                 layer.close(index);
                 loadingAjax({
                     url: './tomcatProjectManage',
@@ -269,7 +264,7 @@
                         path: data.path,
                         op: op
                     },
-                    success: function(data) {
+                    success: function (data) {
                         layer.msg(data.msg);
 
                         if (200 == data.code) {
@@ -286,7 +281,7 @@
                     path: data.path,
                     op: op
                 },
-                success: function(data) {
+                success: function (data) {
                     layer.msg(data.msg);
 
                     if (200 == data.code) {
@@ -304,7 +299,7 @@
             data: {
                 id: id
             },
-            success: function(data) {
+            success: function (data) {
                 $('[data-op="' + id + '"]').hide();
                 if (200 == data.code) {
                     if (data.data == 0) {
