多格式文件解压

--- a/modules/server/src/main/resources/vm/node/manage/filemanage.vm
+++ b/modules/server/src/main/resources/vm/node/manage/filemanage.vm
@@ -217,8 +217,8 @@
                 }
             },
             multiple: false,
-            exts: 'zip',
-            acceptMime: '.zip',
+            exts: 'tar|bz2|gz|zip|tar.bz2|tar.gz',
+            // acceptMime: 'application/zip,application/x-tar,application/x-gzip',
             url: './upload',
             before: function () {
                 layer.load(1, {
