--- a/modules/server/src/main/resources/vm/node/manage/filemanage.vm
+++ b/modules/server/src/main/resources/vm/node/manage/filemanage.vm
@@ -218,7 +218,7 @@
             },
             multiple: false,
             exts: 'tar|bz2|gz|zip|tar.bz2|tar.gz',
-            // acceptMime: 'application/zip,application/x-tar,application/x-gzip',
+            acceptMime: '.tar,.bz2,.gz,.zip,.tar.bz2,.tar.gz',
             url: './upload',
             before: function () {
                 layer.load(1, {
